<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">gogodeX</string>
    <string name="mapActivity_name">Map Activity</string>
    <string name="friendslist_name">Map Actvitity</string>
    <string name="settingActivity_name">Map Activity</string>
    <string name="zonesActivity">Zones Activity</string>
    <string name="tabs_name">Tabs</string>
	<string name="createaccount_name">Createaccnt</string>
    <string name="createActivity_name">Create Activity</string>

    <string name="username_prompt">Username: </string>
    <string name="password_prompt">Password: </string>
    <string name="first_prompt">First Name (optional):</string>
    <string name="last_prompt">Last Name (optional):</string>
    <string name="login_button">Login</string>
    <string name="desusername_prompt">Desired Username: </string>
    <string name="despassword_prompt">Desired Password: </string>
    <string name="despassword_prompt2">Desired Password (repeat): </string>
    <string name="create_button">Create Account</string>
    <string name="create_button2">Create New Account!</string>
    <string name="create_button3">Back</string>

    <string name="title_show_hide_toggle">Show/Hide</string>
    <string name="summary_show_hide_toggle">Click to toggle between show and hide.</string>
    
    <!-- Friends list -->
    <string name="add_friend_button">Add Friend</string>
    <string name="remove_friend_button">Remove Friend</string>
    <string name="accept_friend_button">Accept Friend</string>
    <string name="friend_name_prompt">Friend Name</string>
    
    <!-- Zones -->
    <string name="zone_name_label">Zone Name</string>
    <string name="zone_radius_label">Zone Radius (in miles)</string>
    <string name="zone_privacy_label">Zone Privacy</string>
    <string name="show_gps">ShowGPS</string>
    <string name="show_text">ShowText</string>
    <string name="hide">Hide</string>
    <string name="add_zone">Create Zone Here!</string>
    <string name="remove_zone">Remove Zone</string>
    <string name="example_zone">Home</string>
    <string name="default_radius">0.5</string>
    
<string name="title_polling">Polling Frequency</string>
<string name="summary_polling">Select your desired polling frequency.</string>
</resources>
