<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
        android:id="@+id/zone_name_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/zone_name_label"/>
    <EditText
        android:id="@+id/zone_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_zone"
        android:layout_below="@id/zone_name_label"/>
    <TextView
        android:id="@+id/zone_radius_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zone_name_text"
        android:text="@string/zone_radius_label"/>
    <EditText
        android:id="@+id/zone_radius_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_radius"
        android:layout_below="@id/zone_radius_label" />
    <TextView
        android:id="@+id/zone_privacy_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zone_radius_text"
        android:text="@string/zone_privacy_label"/>
    <RadioGroup
    	android:id="@+id/zone_name_privacy"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/zone_privacy_label"
    	android:orientation="horizontal">
    	<RadioButton
    		android:checked="True"
    		android:id="@+id/show_gps"
    		android:text="@string/show_gps" />
    	<RadioButton
    		android:checked="True"
    		android:id="@+id/show_text"
    		android:text="@string/show_text" />
		<RadioButton
    		android:checked="True"
    		android:id="@+id/hide"
    		android:text="@string/hide" />
    </RadioGroup>
    <Button
		android:id="@+id/add_zone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:text="@string/add_zone"
		android:layout_below="@id/zone_name_privacy"
	/>
	<Button
		android:id="@+id/remove_zone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:text="@string/remove_zone"
		android:layout_below="@id/zone_name_privacy"
	/>
	<ListView
	    android:id="@android:id/list"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/remove_zone"
    />
</RelativeLayout>