<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
        android:id="@+id/username_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/desusername_prompt"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_label"/>
    <TextView
        android:id="@+id/password_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/despassword_prompt"
        android:layout_below="@id/username"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label" android:inputType="textPassword"/>
    <TextView
        android:id="@+id/password_label2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/despassword_prompt2"
        android:layout_below="@id/password"/>
    <EditText
        android:id="@+id/password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label2" android:inputType="textPassword"/>
    <TextView
        android:id="@+id/first_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_prompt"
        android:layout_below="@id/password2"/>
    <EditText
        android:id="@+id/Firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_label" android:inputType="textPassword"/>
    <TextView
        android:id="@+id/last_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_prompt"
        android:layout_below="@id/Firstname"/>
    <EditText
        android:id="@+id/Lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_label" android:inputType="textPassword"/>
    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Lastname"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/create_button2" />
</RelativeLayout>