<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dip">
    <TextView
        android:id="@+id/username_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_prompt"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_label"/>
    <TextView
        android:id="@+id/password_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_prompt"
        android:layout_below="@id/username"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"/>
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/login_button" />
</RelativeLayout>